Fix height rule for main image to prevent vertical stretching

--- a/web/system/modules/no.npolar.mosj/resources/style/base.css
+++ b/web/system/modules/no.npolar.mosj/resources/style/base.css
@@ -453,7 +453,7 @@ h6 {
 }
 .article-hero img {
     width:100%;
-    min-height:20em; /* Visible title even if image won't load */
+    min-height:10em; /* Visible title, even if image won't load */
 }
 .article-hero > img,
 .article-hero > canvas,
